fixed contact portion on mobile view

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -23,7 +23,7 @@
 
     header{
         height: auto;
-        width: 100%;
+        max-width: 100%;
     }
 
     .header-photo{
@@ -32,7 +32,7 @@
         img {
             position: absolute;
             right: -50px;
-            top: -140px;
+            top: -150px;
             max-width: 150px;
             max-height: 150px;
         }
@@ -41,23 +41,25 @@
     .header-info{
         width: 100%;
         margin-bottom: 35px;
+        line-height: 1.5rem;
         a {
-            line-height: 1.3rem;
+            line-height: 1.5rem;
             
         }
     }
 
     .about-me{
         height: auto;
+        max-width: 100%;
         h2{
-            line-height: 1.8rem;
+            line-height: 2.3rem;
             span {
                 display: block;
             }
 
         }
         p {
-            line-height: 1.3rem;
+            line-height: 1.5rem;
         }
     }
 
@@ -73,7 +75,7 @@
 
     .Portfolio{
         height: auto;
-        width: 100%;
+        max-width: 100%;
         padding: 5px;
 
         .my-portfolio{
@@ -97,6 +99,29 @@
                 width: 100%;
             }
         }
+    }
 
+    .Contact {
+        max-width: 100%;
+        height: auto;
+        text-align: center;
+        line-height: 1.5rem;
+        .contact-form{
+            input{
+                width: 90%;
+                margin: 10px;
+            }
+            textarea {
+                margin: 15px;
+                width: 90%;
+                height: 150px;
+            }
+            button {
+                margin: 20px;
+            }
+        }
+        .contact-icons{
+            padding: 15px;
+        }
     }
 }
